# Effective

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  justfile  pyproject.toml
.docker/local/: app.Dockerfile  docker-compose-variables.env  docker-compose.yaml
alembic/: env.py
alembic/versions/: 2026_01_08_2148-36ed3b2fec1c_описание_изменений.py
app/: main.py
app/integrations/: base_integration_exception.py
app/integrations/celery/: celery_app.py  tasks.py
app/integrations/postgres/: base_exception.py  exceptions.py  models.py  providers.py
app/integrations/postgres/dtos/: code_dto.py  lobby_dto.py  user_dto.py
app/integrations/postgres/loading_data/: achievement.py  rank.py
app/integrations/postgres/loading_data/data/: achievement.xlsx  rank.xlsx
app/integrations/postgres/orms/: __init__.py  achievement_orm.py  baseorm.py  blacklis_orm.py  code_orm.py  games_achievements_orm.py  games_history_orm.py  player_game_statistics_orm.py  player_orm.py  rank_orm.py  room_orm.py  user_orm.py
app/integrations/postgres/repositories/: base_repository.py  code_repository.py  lobby_repository.py  user_repository.py
app/integrations/redis/: config.py  redis.py
app/integrations/sqladmin/models/: code_admin.py  room_admin.py  user_admin.py
app/services/: base_exception_service.py  code_service.py  exceptions.py  lobby_service.py  user_service.py
app/transports/depends/: app_scope.py  postgres.py
app/transports/handlers/: base_exception_handlers.py
app/transports/handlers/admins/: sqladmin_authentication.py
app/transports/handlers/lobby/: exceptions.py  routes.py  schemas.py
app/transports/handlers/users/: exceptions.py  routes.py  schemas.py  utils.py
app/utils/: app_factory.py  config.py  logger_config.py  models.py  parse_postgres_dsn.py
app/utils/integrations/postgres/: base_exception_handler.py
tests/: conftest.py  conftest_utils.py
tests/integrations/postgres/: conftest.py  conftest_utils.py
tests/integrations/postgres/lobby_repository/: conftest.py
tests/integrations/postgres/lobby_repository/add_black_list/: test_unit.py
tests/integrations/postgres/lobby_repository/black_list/: test_unit.py
tests/integrations/postgres/lobby_repository/change_host/: test_unit.py
tests/integrations/postgres/lobby_repository/change_max_players/: test_unit.py
tests/integrations/postgres/lobby_repository/change_password/: test_unit.py
tests/integrations/postgres/lobby_repository/change_private/: test_unit.py
tests/integrations/postgres/lobby_repository/create_game_achievement/: test_unit.py
tests/integrations/postgres/lobby_repository/create_game_statistics/: test_unit.py
tests/integrations/postgres/lobby_repository/create_history_game/: test_unit.py
tests/integrations/postgres/lobby_repository/create_player/: test_unit.py
tests/integrations/postgres/lobby_repository/create_room/: test_unit.py
tests/integrations/postgres/lobby_repository/delete_game_bj/: test_unit.py
tests/integrations/postgres/lobby_repository/delete_game_fm/: test_unit.py
tests/integrations/postgres/lobby_repository/delete_player/: test_unit.py
tests/integrations/postgres/lobby_repository/delete_player_except_current_room/: test_unit.py
tests/integrations/postgres/lobby_repository/delete_room/: test_unit.py
tests/integrations/postgres/lobby_repository/disconnect_change/: test_unit.py
tests/integrations/postgres/lobby_repository/disconnect_check/: test_unit.py
tests/integrations/postgres/lobby_repository/find_player/: test_unit.py
tests/integrations/postgres/lobby_repository/game_started/: test_unit.py
tests/integrations/postgres/user_repository/: conftest.py
tests/services/lobby_service/: conftest.py
tests/services/lobby_service/create_room/: test_unit.py
tests/services/lobby_service/get_all_rooms/: test_unit.py
tests/services/lobby_service/join_lobby/: test_unit.py
tests/services/user_service/: conftest.py
tests/services/user_service/activate_user/: test_unit.py
tests/services/user_service/create_user/: test_unit.py
tests/services/user_service/delete_user/: test_unit.py
tests/services/user_service/get_current_user/: test_unit.py
tests/services/user_service/get_user/: test_unit.py
tests/services/user_service/recovery_password/: test_unit.py
tests/services/user_service/reset_password/: test_unit.py
tests/services/user_service/update_user/: test_unit.py
tests/services/user_service/upload_avatar/: test_unit.py
tests/transports/handlers/lobby/: conftest.py
tests/transports/handlers/users/: conftest.py
(+48 files in other folders)
