[project]
name = "Effective"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "mypy>=1.16.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.6.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
    "websockets>=15.0.1",
    "alembic>=1.13.1",
    "celery>=5.4.0",
    "pillow>=10.0.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.11.5",
    "python-jose[cryptography]==3.3.0",
    "fastapi-pagination>=0.13.2",
    "bcrypt==3.2.2",
    "jose>=1.0.0",
    "pandas>=2.3.1",
    "xlrd>=2.0.1",
    "openpyxl>=3.1.5",
    "fastapi-mail>=1.5.0",
    "python-multipart>=0.0.20",
    "sqladmin[full]>=0.21.0",
    "redis>=6.4.0",
    "types-redis>=4.6.0.20241004",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "requests>=2.32.5",
    "types-requests>=2.32.4.20250913",
    "httpx>=0.28.1",
    "isort>=7.0.0",
]

[dependency-groups]
dev = [
    "ruff<=0.12.7",
    "pre-commit>=4.2.0",
]
test = [
    "docker>=7.1.0",
    "httpx>=0.28.1",
    "polyfactory>=2.22.1",
    "pytest>=8.4.1",
    "pytest-asyncio==0.26.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore:coroutine.*was never awaited:RuntimeWarning",
    "ignore::RuntimeWarning"
]

[tool.mypy]
python_version = 3.11
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin",
]
follow_imports = "silent" # подавляет ошибки при отсутствии импортов
disallow_any_generics = true # запрет использовать any в дженериках
check_untyped_defs = true # Проверяет все функции без анатоции
disallow_untyped_defs = true # Запрещает объявлять функции без аннотаций типов
show_error_codes = true #включает отображение кодов ошибок при выводе сообщений
ignore_missing_imports = true # Игнорирование отсутствующих импортов
disallow_incomplete_defs = true # запрещает использование неполных определений функций и методов
strict_optional = true #включает строгий режим обработки Optional типов, проверка на None
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "redis.*",
    "redis.asyncio.*",
    "redis.asyncio.client.*",
    "app.integrations.redis.*",
    "app.utils.models",
    "app.transports.handlers.lobby_websocet.routes",
    "app.utils.app_factory"
]
disable_error_code = "type-arg"

[[tool.mypy.overrides]]
module = "app.integrations.postgres.repositories.*"
disable_error_code = ["union-attr"]

[[tool.mypy.overrides]]
module = "alembic.versions.*"
disable_error_code = ["arg-type"]

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = [
  ".venv",
]

lint.ignore = [
  "ANN401",  # Игнорировать сложные аннотации типов
  "F405",    # Игнорировать возможные неопределенные переменные
  "N818",    # Игнорировать требование Error в именах исключений (пункт 1)
  "N999",    # Игнорировать проверку имен модулей (пункт 2)
  "N806",    # Игнорировать стиль переменных в функциях (пункт 4)
  "N805",    # Игнорировать именование первого аргумента методов (пункт 5)
  "RET504",  # Игнорировать избыточные присваивания (пункт 6)
  "SLF001",
]

lint.select = [
  "N", # pep8-naming - проверка стиля именнования
  "ANN", # flake8-annotations - проверка анатации типов
  "ASYNC", # flake8-async
  "T20", # flake8-print - проверка наличие вызовов print()
  "RET", # flake8-return - проверки возвратов из функций
  "SLF", # flake8-self - проверка использование self в методах класса
  "FLY", # flynt — автоматическое добавление аннотаций типов для функций
]

[tool.ruff.format]
quote-style = "single" # Использовать одинарные кавычки для строк
docstring-code-format = true # Форматировать строки документации (docstrings) по правилам кода
skip-magic-trailing-comma = false # Не пропускать магическую запятую в конце строк (то есть запятая сохраняется)

[tool.ruff.lint.isort]
known-first-party = ["app", "tests"]
force-sort-within-sections = true
order-by-type = true
split-on-trailing-comma = true

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true
known_first_party = ["app", "tests"]
force_sort_within_sections = true
order_by_type = true
combine_as_imports = true